@@ -154,10 +154,6 @@ var CENTRAL_CONFIG = {
   sanitize_field_names: 'sanitizeFieldNames'
 }
 
-var VALIDATORS = {
-  transactionSampleRate: numberBetweenZeroAndOne
-}
-
 var BOOL_OPTS = [
   'active',
   'asyncHooks',
@@ -320,21 +316,16 @@ class Config {
             normalize(conf, agent.logger)
 
             for (const [key, value] of Object.entries(conf)) {
-              const validator = VALIDATORS[key]
-              if (validator ? validator(value) : true) {
-                const oldValue = agent._conf[key]
-                agent._conf[key] = value
-                if (key === 'logLevel' && value !== oldValue && !logging.isLoggerCustom(agent.logger)) {
-                  // If a new log level value was provided, and we aren't
-                  // already using a custom-provided logger (_conf.logger),
-                  // then update the agent logger.
-                  agent.logger = agent._conf.logger = logging.createLogger(value)
-                  agent.logger.info(`Remote config success. Updated logger with new logLevel: ${value}`)
-                }
-                agent.logger.info(`Remote config success. Updated ${key}: ${value}`)
-              } else {
-                agent.logger.warn(`Remote config failure. Invalid value for ${key}: ${value}`)
+              const oldValue = agent._conf[key]
+              agent._conf[key] = value
+              if (key === 'logLevel' && value !== oldValue && !logging.isLoggerCustom(agent.logger)) {
+                // If a new log level value was provided, and we aren't
+                // already using a custom-provided logger (_conf.logger),
+                // then update the agent logger.
+                agent.logger = agent._conf.logger = logging.createLogger(value)
+                agent.logger.info(`Remote config success. Updated logger with new logLevel: ${value}`)
               }
+              agent.logger.info(`Remote config success. Updated ${key}: ${value}`)
             }
           }
         })
@@ -422,7 +413,31 @@ function normalize (opts, logger) {
   normalizeIgnoreOptions(opts)
   normalizeSanitizeFieldNames(opts)
   normalizeCloudProvider(opts, logger)
+  normalizeTransactionSampleRate(opts, logger)
   truncateOptions(opts)
+}
+
+// transactionSampleRate is specified to be:
+// - in the range [0,1]
+// - rounded to 4 decimal places of precision (e.g. 0.0001, 0.5678, 0.9999)
+// - with the special case that a value in the range (0, 0.0001] should be
+//   rounded to 0.0001 -- to avoid a small value being rounded to zero.
+//
+// https://github.com/elastic/apm/blob/master/specs/agents/tracing-sampling.md
+function normalizeTransactionSampleRate (opts, logger) {
+  if ('transactionSampleRate' in opts) {
+    // The value was already run through `Number(...)` in `normalizeNumbers`.
+    const rate = opts.transactionSampleRate
+    if (isNaN(rate) || rate < 0 || rate > 1) {
+      opts.transactionSampleRate = DEFAULTS.transactionSampleRate
+      logger.warn('Invalid "transactionSampleRate" config value %s, falling back to default %s',
+        rate, opts.transactionSampleRate)
+    } else if (rate > 0 && rate < 0.0001) {
+      opts.transactionSampleRate = 0.0001
+    } else {
+      opts.transactionSampleRate = Math.round(rate * 10000) / 10000
+    }
+  }
 }
 
 function normalizeSanitizeFieldNames (opts) {
@@ -616,10 +631,6 @@ function pairsToObject (pairs) {
     object[key] = value
     return object
   }, {})
-}
-
-function numberBetweenZeroAndOne (n) {
-  return n >= 0 && n <= 1
 }
 
 function loadConfigFile (configFile) {
